<?xml version="1.0"?>
<package format="2">
  <name>deeprobotics_local_height_map</name>
  <version>0.7.0</version>
  <description>Generates an local height map from distance measurements and robot pose information.</description>
  <maintainer email="shl@email.com">shl</maintainer>
  <license>BSD</license>
  <url type="website"></url>
  <url type="bugtracker"></url>
  <author email="shl@email.com">shl</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <!-- <depend>message_filters</depend> -->
  <!-- <depend>pcl_ros</depend> -->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <!-- <depend>visualization_msgs</depend> -->
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <!-- <depend>kindr</depend> -->
  <!-- <depend>kindr_ros</depend> -->
  <depend>tf</depend>
  <exec_depend>elevation_mapping</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <!-- <depend>tf_conversions</depend> -->
  <!-- <depend>eigen_conversions</depend> -->
  <!-- <depend>boost</depend> -->
  <!-- <depend>eigen</depend> -->
</package>
